--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -21,15 +21,17 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
-        with:
-            version: v0.12.0
-            driver-opts: |
-                image=moby/buildkit:v0.12.0
+        # with:
+        #     version: v0.12.0
+        #     driver-opts: |
+        #         image=moby/buildkit:v0.12.0
 
       - name: Build and push Docker image
         id: docker_build
         uses: docker/build-push-action@v5
         with:
+          context: .
+          file: ./Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
